# clinical-codes-finder

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data/gold/: CHANGELOG.md  README.md  gold_v0.1.0.json  gold_v0.1.1.json
docs/: design-decisions.md  scope.md
docs/superpowers/plans/: 2026-04-29-graph-state.md  2026-04-29-prompts.md  2026-04-30-builder.md  2026-04-30-metrics.md  2026-04-30-nodes.md  2026-04-30-reporter.md  2026-04-30-run-query.md  2026-04-30-runner.md  2026-05-01-streamlit-app.md  2026-05-02-planner-prompt-fixes.md  2026-05-02-run-eval.md  2026-05-02-rxnorm-dose-fallback.md  2026-05-05-result-reranking.md
docs/superpowers/specs/: 2026-04-29-graph-state-design.md  2026-04-29-prompts-design.md  2026-04-30-builder-design.md  2026-04-30-metrics-design.md  (+9 more)
notebooks/: 01_clinical_tables_api_probe.ipynb
results/: eval_20260502_210940.json  eval_20260502_210940.md  eval_20260503_104339.json  eval_20260503_104339.md  eval_20260505_183417.json  eval_20260505_183417.md  eval_20260505_185454.json  eval_20260505_185454.md  eval_20260506_123053.json  eval_20260506_123053.md
scripts/: run_eval.py  run_query.py  verify_gold_codes.py
src/clinical_codes/: config.py  schemas.py
tests/cli/: test_display.py  test_run_query.py
tests/evaluation/: test_metrics.py  test_reporter.py  test_runner.py
tests/graph/: test_builder.py  test_nodes.py  test_prompts.py  test_state.py
tests/tools/: test_hcpcs.py  test_hpo.py  test_icd10cm.py  test_loinc.py  test_rxnorm.py  test_ucum.py
(+18 files in other folders)
